# asus_bios_renamer

./: .gitignore  Cargo.toml  LICENSE  dev.bdavidson.BiosRenamer.yml
data/: dev.bdavidson.BiosRenamer.desktop
flatpak-scripts/: build-flatpak.sh  gen-cargo-sources.sh  requirements.txt
src/: bios.rs  bios_info_view.rs  cli_main.rs  gui_main.rs  main.rs
src/gui/: mod.rs
